@@ -112,6 +112,13 @@ class DictSetTest(unittest.TestCase):
         self.assertEqual(d1.keys() ^ set(d3.keys()),
                          {'a', 'b', 'd', 'e'})
 
+        self.assertEqual(d1.keys() - d1.keys(), set())
+        self.assertEqual(d1.keys() - d2.keys(), {'a'})
+        self.assertEqual(d1.keys() - d3.keys(), {'a', 'b'})
+        self.assertEqual(d1.keys() - set(d1.keys()), set())
+        self.assertEqual(d1.keys() - set(d2.keys()), {'a'})
+        self.assertEqual(d1.keys() - set(d3.keys()), {'a', 'b'})
+
         self.assertFalse(d1.keys().isdisjoint(d1.keys()))
         self.assertFalse(d1.keys().isdisjoint(d2.keys()))
         self.assertFalse(d1.keys().isdisjoint(list(d2.keys())))
@@ -161,6 +168,13 @@ class DictSetTest(unittest.TestCase):
                          {('a', 1), ('a', 2)})
         self.assertEqual(d1.items() ^ d3.items(),
                          {('a', 1), ('b', 2), ('d', 4), ('e', 5)})
+
+        self.assertEqual(d1.items() - d1.items(), set())
+        self.assertEqual(d1.items() - d2.items(), {('a', 1)})
+        self.assertEqual(d1.items() - d3.items(), {('a', 1), ('b', 2)})
+        self.assertEqual(d1.items() - set(d1.items()), set())
+        self.assertEqual(d1.items() - set(d2.items()), {('a', 1)})
+        self.assertEqual(d1.items() - set(d3.items()), {('a', 1), ('b', 2)})
 
         self.assertFalse(d1.items().isdisjoint(d1.items()))
         self.assertFalse(d1.items().isdisjoint(d2.items()))
